# EZ-Language

./: .ezconfig  .gitignore  CMakeLists.txt  README.md
examples/: demo.ez  future_vue.ez
grammar/: EZLanguage.g4
src/: main.cpp
src/core/: interpreter.cpp
src/frontend/: lexer.cpp
tools/: builder.py
